tests/errors/parser/sig-missing-comma.futil
component main(
    a: 1 // missing comma
    b: 2
) -> () {
    cells {}
    wires {}
    control {}
}